--- a/style.css
+++ b/style.css
@@ -12,14 +12,14 @@ body, ul {
   
  
   nav {
-    background-color:rgb(23, 187, 220); 
+    background-color:rgb(17, 50, 58); 
      
   }
   
   ul {
     list-style: none;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     align-items: center;
     justify-content: space-around;
   }
@@ -87,7 +87,7 @@ body, ul {
 
 .hero-image {
 
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./images/home.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./images/hero.png");
   height: 400px;
   width: 100%;
   background-position: center;
